fixed textarea error message spacing issue, applied class to textareas to adjust height of input fields, gave chm logo a bem class name

--- a/css/custom-smartform.css
+++ b/css/custom-smartform.css
@@ -26,16 +26,17 @@ BEM (BLOCK ELEMENT MODIFIER ) NOTATION
 }
 */
 
-.logo {
-	margin-top: 2rem;
-	width: 45%;
-}
 /***************************************************/
 /* LAYOUT */
 /***************************************************/
 /***************************************************/
 /* MODULES */
 /***************************************************/
+
+.logo {
+	margin-top: 2rem;
+	width: 45%;
+}
 
 /* DOCUMENT */
 .document__title {
@@ -90,9 +91,7 @@ BEM (BLOCK ELEMENT MODIFIER ) NOTATION
 }
 
 .field--description {
-	height: 5em;
 	width: 30em;
-	margin-bottom: 1em;
 }
 
 .field--email {
@@ -111,9 +110,10 @@ BEM (BLOCK ELEMENT MODIFIER ) NOTATION
 	width: 20em;
 }
 
-textarea {
-	width: 30em;
+.field--description__input {
+	height: 5em	;
 }
+
 
 /*Fieldsets*/
 
